src/objects/Savings_Payment_Collection_Record__c.object
<CustomObject>
    <description>Savings Payment Collection Record</description>
    <fields>
        <fullName>Actual_Collected_Amount__c</fullName>
        <label>Actual Collected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Check</label>
        <referenceTo>Check__c</referenceTo>
        <relationshipLabel>Savings Payment Collection Record</relationshipLabel>
        <relationshipName>Savings_Payment_Collection_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Savings Payment Collection Record</relationshipLabel>
        <relationshipName>Savings_Payment_Collection_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <description>Collection_Date</description>
        <label>Collection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mandatory_Payment__c</fullName>
        <label>Mandatory Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdues__c</fullName>
        <label>Overdues</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Mode</label>
        <referenceTo>Payment_Mode__c</referenceTo>
        <relationshipLabel>Savings Payment Collection Record</relationshipLabel>
        <relationshipName>Savings_Payment_Collection_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Savings Account</label>
        <referenceTo>Savings_Account__c</referenceTo>
        <relationshipLabel>Savings Payment Collection Record</relationshipLabel>
        <relationshipName>Savings_Payment_Collection_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Collection_Amount__c</fullName>
        <formula>Overdues__c  +  Mandatory_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Collection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Savings Payment Collection Record</label>
    <nameField>
        <displayFormat>PCN-{0000000000}</displayFormat>
        <label>Payment Collection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Savings Payment Collection Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Check_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>Actual_Collected_Amount__c  != Check__r.Check_Amount__c</errorConditionFormula>
        <errorMessage>Collection amount doesn&apos;t match check amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Payment_Mode</fullName>
        <active>true</active>
        <errorConditionFormula>Payment_Mode__r.Name = &apos;Check&apos; &amp;&amp; ISBLANK( Check__c )</errorConditionFormula>
        <errorMessage>Please input a check number.</errorMessage>
    </validationRules>
</CustomObject>